--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ project(lidar_mount)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+    tf2
+    tf2_ros
     rospy
+    roscpp
     std_msgs
     geometry_msgs
     rosserial_arduino
