--- a/package.xml
+++ b/package.xml
@@ -34,16 +34,24 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>rosserial_arduino</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>rosserial_client</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>roscpp</build_depend>
   
   <run_depend>rospy</run_depend>
   <run_depend>rosserial_arduino</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rosserial_client</run_depend>
+  <run_depend>tf2</run_depend>
+  <run_depend>tf2_ros</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>urg_node</run_depend>
+  <run_depend>laser_assembler</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
