Set up arduino build through catkin_make.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,19 @@ catkin_package(
 #   ${catkin_LIBRARIES}
 # )
 
+rosserial_generate_ros_lib(
+    PACKAGE rosserial_arduino
+    SCRIPT make_libraries.py
+)
+
+rosserial_configure_client(
+    DIRECTORY firmware
+    TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
+)
+
+rosserial_add_client_target(firmware firmware ALL)
+rosserial_add_client_target(firmware firmware-upload)
+
 #############
 ## Install ##
 #############
