--- a/package.xml
+++ b/package.xml
@@ -40,7 +40,9 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
-  
+  <build_depend>rosserial_arduino</build_depend>
+  <build_depend>rosserial_client</build_depend>
+
   <run_depend>rospy</run_depend>
   <run_depend>rosserial_arduino</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -52,6 +54,8 @@
   <run_depend>roscpp</run_depend>
   <run_depend>urg_node</run_depend>
   <run_depend>laser_assembler</run_depend>
+  <run_depend>rosserial_arduino</run_depend>
+  <run_depend>rosserial_client</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
