--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(${ARDUINO_SDK}/libraries)
 include_directories(${ARDUINO_SDK}/hardware/arduino/avr/libraries)
 
 generate_arduino_firmware(firmware
-    SRCS firmware.cpp ${ROS_LIB_DIR}/time.cpp
+    SRCS firmware.cpp firmware.h ${ROS_LIB_DIR}/time.cpp
     BOARD uno
     PORT /dev/ttyUSB-1
 )
