Move controller to ScanController module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ generate_messages(
     std_msgs
 )
 
-catkin_package()
+catkin_package(
+    CATKIN_DEPENDS message_runtime std_msgs
+)
 
 ###########
 ## Build ##
