Define custom message dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,13 @@ catkin_package(
 ###########
 ## Build ##
 ###########
-
 # Arduino config.
 rosserial_generate_ros_lib(
     PACKAGE rosserial_arduino
     SCRIPT make_libraries.py
 )
+
+add_dependencies(${PROJECT_NAME}_ros_lib ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 rosserial_configure_client(
     DIRECTORY firmware
